# standards-tracker

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: daily-ietf-watch.yml
config/: default.yaml
reports/: 2026-07-08-ietf-identity-ai-watch.csv  2026-07-08-ietf-identity-ai-watch.md  2026-07-09-ietf-identity-ai-watch.csv  2026-07-09-ietf-identity-ai-watch.md  2026-07-10-ietf-identity-ai-watch.csv  2026-07-10-ietf-identity-ai-watch.md  2026-07-11-ietf-identity-ai-watch.csv  2026-07-11-ietf-identity-ai-watch.md  2026-07-12-ietf-identity-ai-watch.csv  2026-07-12-ietf-identity-ai-watch.md  2026-07-13-ietf-identity-ai-watch.csv  2026-07-13-ietf-identity-ai-watch.md  2026-07-14-ietf-identity-ai-watch.csv  2026-07-14-ietf-identity-ai-watch.md  2026-07-15-ietf-identity-ai-watch.csv  2026-07-15-ietf-identity-ai-watch.md  2026-07-16-ietf-identity-ai-watch.csv  2026-07-16-ietf-identity-ai-watch.md  2026-07-17-ietf-identity-ai-watch.csv  2026-07-17-ietf-identity-ai-watch.md  2026-07-18-ietf-identity-ai-watch.csv  2026-07-18-ietf-identity-ai-watch.md  2026-07-19-ietf-identity-ai-watch.csv  2026-07-19-ietf-identity-ai-watch.md  2026-07-20-ietf-identity-ai-watch.csv  2026-07-20-ietf-identity-ai-watch.md  2026-07-21-ietf-identity-ai-watch.csv  2026-07-21-ietf-identity-ai-watch.md  2026-07-22-ietf-identity-ai-watch.csv  2026-07-22-ietf-identity-ai-watch.md  2026-07-23-ietf-identity-ai-watch.csv  2026-07-23-ietf-identity-ai-watch.md
tests/: test_classify.py  test_datatracker.py  test_reporting.py  test_storage.py  test_w3c.py
(+14 files in other folders)
