[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ietf-watch"
version = "0.1.0"
description = "Daily IETF Internet-Draft monitor for identity and AI governance work"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "hlflanagan"}]
dependencies = [
  "requests==2.32.3",
  "beautifulsoup4==4.12.3",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
]

[project.scripts]
ietf-watch = "ietf_watch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
